--- a/less/blocks/best.less
+++ b/less/blocks/best.less
@@ -155,6 +155,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .best {
+    padding-bottom: 100px;
+  }
+
   .best__wrapper {
     .container(400px);
   }
@@ -210,6 +214,10 @@
 }
 
 @media (min-width: @desktop-small-width) {
+
+  .best {
+    padding-bottom: 80px;
+  }
   
   .best__wrapper {
     .container(800px);
