--- a/less/blocks/navigation.less
+++ b/less/blocks/navigation.less
@@ -148,7 +148,7 @@
     position: relative;
     &:not(:first-child)::before {
       position: absolute;
-      top: center;
+      top: 0;
       left: 0;
       transform: translateX(-50%);
       display: block;
