--- a/less/blocks/footer-nav.less
+++ b/less/blocks/footer-nav.less
@@ -25,3 +25,55 @@
   text-decoration: none;
 }
 
+@media (min-width: @tablet-width) {
+  .footer-nav__link {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    letter-spacing: 0.3em;
+  }
+}
+
+@media (min-width: @desktop-small-width) {
+
+  .footer-nav__link {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 12px;
+    padding-right: 12px;
+    letter-spacing: 0.1em;
+  }
+}
+
+@media (min-width: @desktop-width) {
+
+  .footer-nav__item {
+    position: relative;
+    &:not(:first-child)::before {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translate(-50%, -50%);
+      display: block;
+      content: "~";
+      color: @gray;
+      font-size: 14px;
+      line-height: 24px;
+    }
+  }
+  
+  .footer-nav__link {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
+    letter-spacing: 0.1em;
+  }
+}
+
+@media (min-width: @max-width) {
+  .footer-nav__link {
+    padding-left: 45px;
+    padding-right: 45px;
+    letter-spacing: 0.2em;
+  }
+}
