fix padding for footer

--- a/css/style.css
+++ b/css/style.css
@@ -2425,6 +2425,10 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
+  .page-footer {
+    padding-top: 20px;
+    padding-bottom: 70px;
+  }
 }
 .footer-nav__list {
   list-style: none;
