--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -48,4 +48,9 @@
   .page-footer__wrapper {
     .container(1260px);
   }
+
+  .page-footer {
+    padding-top: 20px;
+    padding-bottom: 70px;
+  }
 }
