--- a/less/blocks/dishes.less
+++ b/less/blocks/dishes.less
@@ -202,6 +202,7 @@
   }
 
   .dishes__description {
+    max-width: 420px;
     height: 512px;
     box-sizing: border-box;
     text-align: left;
@@ -257,6 +258,7 @@
   .dishes__text {
     text-align: left;
     margin-top: 40px;
+    align-items: center;
   }
 
   .dishes__time {
@@ -322,6 +324,7 @@
   }
 
   .dishes__description {
+    max-width: 550px;
     padding-left: 63px;
     padding-right: 63px;
     padding-bottom: 160px;
