--- a/less/blocks/book.less
+++ b/less/blocks/book.less
@@ -62,6 +62,7 @@
   position: relative;
   width: 100%;
   height: 60px;
+  
 
   &-line {
     position: absolute;
@@ -159,11 +160,26 @@
 
   .book__page {
     .container(300px);
+    // max-width: 298px;
   }
+
+  
 }
 
 @media (min-width: @desktop-small-width) {
-  
+  .book__title {
+    max-width: 298px;
+  }
+
+  .book__description {
+    max-width: 298px;
+  }
+
+  .book__page--2, .book__page--3 {
+    .book__description, .book__title {
+      font-size: 0;
+    }
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -216,24 +232,30 @@
 
   .book__page {
     .container(310px);
-
-    &--2, &--3 {
-      // display: flex;
-      // width: 100%;
-      // height: 100%;
-    }
   }
- 
-    
+
+  
 
   .book__title {
     margin-top: 55px;
     margin-bottom: 30px;
     font-size: 40px;
     line-height: 40px;
+    max-width: 330px;
   }
+
+  .book__description {
+    max-width: 330px;
+  }
+
   .book__date {
     width: 230px;
+  }
+
+  .book__page--2, .book__page--3 {
+    .book__description, .book__title {
+      font-size: 0;
+    }
   }
 
 }
@@ -251,10 +273,23 @@
 
   .book__page {
     .container(350px);
+    // max-width: 370px;
   }
 
   .book__title {
     font-size: 44px;
     line-height: 60px;
+    max-width: 370px;
   }
+
+  .book__description {
+    max-width: 370px;
+  }
+
+  .book__page--2, .book__page--3 {
+    .book__description, .book__title {
+      font-size: 0;
+    }
+  }
+
 }
