--- a/less/blocks/book.less
+++ b/less/blocks/book.less
@@ -148,6 +148,14 @@
   z-index: 35;
 }
 
+.book__title {
+  max-width: 258px;
+}
+
+.book__description {
+  max-width: 258px;
+}  
+
 @media (min-width: @tablet-width) {
   .book {
     .container(320px);
@@ -160,7 +168,6 @@
 
   .book__page {
     .container(300px);
-    // max-width: 298px;
   }
 
   
@@ -170,10 +177,10 @@
   .book__title {
     max-width: 298px;
   }
-
+  
   .book__description {
     max-width: 298px;
-  }
+  }  
 
   .book__page--2, .book__page--3 {
     .book__description, .book__title {
