--- a/less/blocks/navigation.less
+++ b/less/blocks/navigation.less
@@ -48,6 +48,13 @@
   }
 }
 
+.navigation--nojs {
+  background-color: @gray;
+  .navigation__toggle {
+    display: none;
+  }
+}
+
 .navigation__list {
   position: absolute;
   left: 0;
