--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,14 @@ body {
   overflow-y: scroll;
 }
 .visually-hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 @font-face {
   font-family: "Scriptina";
