--- a/less/blocks/best.less
+++ b/less/blocks/best.less
@@ -263,6 +263,14 @@
     top: auto;
     bottom: -15px;
     left: -20px;
+    &:hover {
+      background-color: fade(#fff,80%);
+      transition: all 0.3s;
+    }
+    &:active {
+      opacity: 0.8;
+      transition: all 0.3s;
+    }
   }
 
 }
