--- a/less/blocks/book.less
+++ b/less/blocks/book.less
@@ -187,6 +187,20 @@
       font-size: 0;
     }
   }
+
+  .book__link {
+    transition: all 0.3s;
+  }
+
+  .book__link:hover {
+    background-color: #ebe8df;
+    transition: all 0.3s;
+  }
+
+  .book__link:active {
+    filter: brightness(95%);
+    transition: all 0.3s;
+  }
 }
 
 @media (min-width: @desktop-width) {
