--- a/less/blocks/footer-nav.less
+++ b/less/blocks/footer-nav.less
@@ -35,12 +35,40 @@
 
 @media (min-width: @desktop-small-width) {
 
-  .footer-nav__link {
-    padding-top: 15px;
-    padding-bottom: 15px;
+  .footer-nav__item {
     padding-left: 12px;
     padding-right: 12px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .footer-nav__link {
+    position: relative;
+    padding: 0;
     letter-spacing: 0.1em;
+
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1px;
+      position: absolute;
+      bottom: -3px;
+      background-color: transparent;
+      transition: all 0.3s;
+    }
+
+    &:hover, &:active {
+      &::after {
+        background-color: fade(@gray, 70%);
+        transition: all 0.8s;
+      }
+    }
+
+    &:active {
+      opacity: 0.7;
+      transition: all 0.3s;
+    }
   }
 }
 
@@ -48,6 +76,11 @@
 
   .footer-nav__item {
     position: relative;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
     &:not(:first-child)::before {
       position: absolute;
       top: 50%;
@@ -62,18 +95,17 @@
   }
   
   .footer-nav__link {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 25px;
-    padding-right: 25px;
     letter-spacing: 0.1em;
   }
 }
 
 @media (min-width: @max-width) {
-  .footer-nav__link {
+  .footer-nav__item {
     padding-left: 45px;
     padding-right: 45px;
+  }
+
+  .footer-nav__link {
     letter-spacing: 0.2em;
   }
 }
