--- a/less/blocks/greeting.less
+++ b/less/blocks/greeting.less
@@ -80,6 +80,20 @@
     width: 566px;
     margin-bottom: 60px;
   }
+
+  .greeting__link {
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: fade(#393733, 60%);
+      transition: all 0.3s;
+    }
+
+    &:active {
+      background-color: fade(#393733, 75%);
+      transition: all 0.3s;
+    }
+  }
 }
 
 @media (min-width: @desktop-width) {
