--- a/less/blocks/navigation.less
+++ b/less/blocks/navigation.less
@@ -131,11 +131,39 @@
     }
   }
 
-  .navigation__link {
+  .navigation__item {
     padding: 0 15px;
+  }
+
+  .navigation__link {
+    position: relative;
+    padding: 0;
     font-size: 12px;
     line-height: 24px;
     letter-spacing: 0.2em;
+
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 2px;
+      position: absolute;
+      bottom: -3px;
+      background-color: transparent;
+      transition: all 0.3s;
+    }
+
+    &:hover, &:active {
+      &::after {
+        background-color: fade(white, 70%);
+        transition: all 0.8s;
+      }
+    }
+
+    &:active {
+      filter: brightness(75%);
+      transition: all 0.3s;
+    }
   }
 }
 
@@ -144,15 +172,9 @@
     .container(900px);
   }
 
-  .navigation__link {
-    padding: 0 25px;
-    font-size: 13px;
-    line-height: 24px;
-    letter-spacing: 0.3em;
-  }
-
   .navigation__item {
     position: relative;
+    padding: 0 25px;
     &:not(:first-child)::before {
       position: absolute;
       top: 0;
@@ -165,11 +187,20 @@
       line-height: 24px;
     }
   }
+
+  .navigation__link {
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: 0.3em;
+  }
 }
 
 @media (min-width: @max-width) {
-  .navigation__link {
+  .navigation__item {
     padding: 0 35px;
+  }
+
+  .navigation__link {
     font-size: 14px;
   }
 }
