--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -57,6 +57,20 @@
   }
 }
 
+@media (min-width: @desktop-small-width) {
+  .social__link {
+    transition: all 0.3s;
+    &:hover {
+      filter: brightness(80%);
+      transition: all 0.3s;
+    }
+    &:active {
+      filter: brightness(65%);
+      transition: all 0.3s;
+    }
+  }
+}
+
 @media (min-width: @max-width) {
   .social__link {
     padding: 0 14px;
