--- a/less/blocks/tabs.less
+++ b/less/blocks/tabs.less
@@ -63,13 +63,20 @@
   }
 }
 
+.tabs__wrapper {
+  width: 210px;
+  overflow-x: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .tabs__list {
   margin: 0;
   padding: 0;
-  width: 210px;
-  margin-left: auto;
-  margin-right: auto;
-  overflow-x: hidden;
+  // width: 210px;
+  // margin-left: auto;
+  // margin-right: auto;
+  // overflow-x: hidden;
   display: flex;
   flex-direction: row;
   list-style: none;
@@ -94,9 +101,14 @@
     width: 420px;
   }
 
-  .tabs__list {
+  .tabs__wrapper {
     width: 270px;
   }
+
+
+  // .tabs__list {
+  //   width: 270px;
+  // }
 
   .tabs__image {
     width: 70px;
@@ -118,9 +130,9 @@
   .tabs {
     width: 420px;
   }
-  .tabs__list {
-    width: 270px;
-  }
+  // .tabs__list {
+  //   width: 270px;
+  // }
 
    
   .tabs__item:not(.tabs__item--active):hover {
@@ -171,9 +183,13 @@
     padding: 0 15px;
   }
 
-  .tabs__list {
+  .tabs__wrapper {
     width: 360px;
   }
+
+  // .tabs__list {
+  //   width: 360px;
+  // }
   
   .tabs__image {
     width: 90px;
