--- a/css/style.css
+++ b/css/style.css
@@ -473,9 +473,15 @@ body {
   position: relative;
   height: 100%;
   background-color: #979995;
-  background-image: url("../img/bg_header_2.jpg");
   background-position: center 0;
   background-size: cover;
+}
+.no-webp .page-header,
+.no-js .page-header {
+  background-image: url("../img/bg_header.jpg");
+}
+.webp .page-header {
+  background-image: url("../img/bg_header.webp");
 }
 .page-header__wrapper {
   margin-left: 40px;
@@ -1197,9 +1203,15 @@ body {
   padding-top: 60px;
   padding-bottom: 70px;
   background-color: #dfe0d7;
-  background-image: url("../img/bg_dishes.jpg");
   background-position: center 0;
   background-size: cover;
+}
+.no-webp .dishes,
+.no-js .dishes {
+  background-image: url("../img/bg_dishes.jpg");
+}
+.webp .dishes {
+  background-image: url("../img/bg_dishes.webp");
 }
 .dishes__wrapper {
   max-width: 280px;
