--- a/less/blocks/dishes.less
+++ b/less/blocks/dishes.less
@@ -2,9 +2,17 @@
   padding-top: 60px;
   padding-bottom: 70px;
   background-color: #dfe0d7;
-  background-image: url("../img/bg_dishes.jpg");
   background-position: center 0;
   background-size: cover;
+}
+
+.no-webp .dishes,
+.no-js .dishes {
+  background-image: url("../img/bg_dishes.jpg");
+}
+
+.webp .dishes {
+  background-image: url("../img/bg_dishes.webp");
 }
 
 .dishes__wrapper {
@@ -20,22 +28,6 @@
   justify-content: center;
   filter: drop-shadow(0px 0px 15px rgba(0,0,0,0.3));
   font-size: 0;
-  
-  // &::after {
-  //   position: absolute;
-  //   z-index: 20;
-  //   bottom: 6px;
-  //   left: 7px;
-  //   content: "";
-  //   display: block;
-  //   width: 0px;
-  //   height: 0px;
-  //   border: 17px solid white;
-  //   border-left-color: transparent;
-  //   border-right-color: transparent;
-  //   border-top-color: transparent;
-  //   transform: rotate(45deg);
-  // }
 
   &::after {
       position: absolute;
