--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -3,9 +3,17 @@
   position: relative;
   height: 100%;
   background-color: #979995;
-  background-image: url("../img/bg_header_2.jpg");
   background-position: center 0;
   background-size: cover;
+}
+
+.no-webp .page-header,
+.no-js .page-header {
+  background-image: url("../img/bg_header.jpg");
+}
+
+.webp .page-header {
+  background-image: url("../img/bg_header.webp");
 }
 
 .page-header__wrapper {
